# MediaServer

./: .env  .gitignore  Cargo.toml  README.md  check_output.txt  media.db  media_server.db-shm  media_server.db-wal  vortex_server.db  vortex_server.db-shm  vortex_server.db-wal
.github/workflows/: release.yml
android_app/: settings.gradle.kts
android_app/app/: build.gradle.kts
android_app/app/src/main/: AndroidManifest.xml
android_app/app/src/main/java/com/example/mediaserver/: MainActivity.kt  MediaApplication.kt
android_app/app/src/main/java/com/example/mediaserver/data/remote/: DynamicBaseUrlInterceptor.kt  MediaApi.kt
android_app/app/src/main/java/com/example/mediaserver/data/repository/: HiddenContentRepository.kt  MediaRepository.kt  SettingsRepository.kt
android_app/app/src/main/java/com/example/mediaserver/di/: NetworkModule.kt
android_app/app/src/main/java/com/example/mediaserver/ui/components/: GlassyComponents.kt
android_app/app/src/main/java/com/example/mediaserver/ui/theme/: Color.kt  Theme.kt
android_app/app/src/main/java/org/knp/vortex/: MainActivity.kt  MediaApplication.kt
android_app/gradle/: libs.versions.toml
src/: main.rs
src/api/: error.rs  handlers.rs  routes.rs
src/api/handlers/: books.rs  comic.rs  library.rs  media.rs  mod.rs  movies.rs  playback.rs  reading_list.rs  settings.rs  tv.rs
src/core/: media_service.rs  metadata.rs  mod.rs  scanner.rs  util.rs
src/db/: mod.rs  models.rs
src/models/db/: library.rs
src/providers/: tmdb.rs
static/: index.html
(+35 files in other folders)
