[package]
name = "media_server"
version = "0.1.0"
edition = "2021"
default-run = "media_server"

[package.metadata.deb]
maintainer = "MediaServer Developer <dev@mediaserver.local>"
copyright = "2025, MediaServer Contributors"
depends = "$auto"
extended-description = """
A high-performance self-hosted media server written in Rust.
"""
assets = [
    ["target/release/media_server", "usr/bin/media_server", "755"],
]
systemd-units = { enable = false }

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "chrono", "macros"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2"
mime_guess = "2"
chrono = { version = "0.4", features = ["serde"] }
tokio-util = { version = "0.7", features = ["io"] }
regex = "1"
urlencoding = "2.1.3"

[[bin]]
name = "media_server"
path = "src/main.rs"

[[bin]]
name = "tmdb_verify"
path = "src/tmdb_verify.rs"

[[bin]]
name = "check_db"
path = "src/check_db.rs"
